chore: add translation for login modal

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -1,12 +1,21 @@
 {
-    "home": {
-      "header": "Pets Platform",
-      "welcome": "Welcome to the Pets Platform",
-      "description": "Your ultimate destination to connect with pet lovers and find the perfect companion.",
-      "lostPets": "Lost Pets",
-      "streetPets": "Street Pets",
-      "login": "Login",
-      "footer": "All rights reserved."
-    }
+  "home": {
+    "header": "Pets Platform",
+    "welcome": "Welcome to the Pets Platform",
+    "description": "Your ultimate destination to connect with pet lovers and find the perfect companion.",
+    "lostPets": "Lost Pets",
+    "streetPets": "Street Pets",
+    "login": "Login",
+    "footer": "All rights reserved."
+  },
+  "login": {
+    "title": "Login",
+    "email": "Email",
+    "password": "Password",
+    "emailPlaceholder": "Enter your email",
+    "passwordPlaceholder": "Enter your password",
+    "submitButton": "Login",
+    "or": "or",
+    "register": "Register"
+  }
 }
-  
