--- a/src/i18n/locales/ge/translation.json
+++ b/src/i18n/locales/ge/translation.json
@@ -1,12 +1,21 @@
 {
-    "home": {
-      "header": "ცხოველების პლატფორმა",
-      "welcome": "კეთილი იყოს თქვენი მობრძანება ცხოველების პლატფორმაზე",
-      "description": "მიიღეთ ინფორმაცია ცხოველების შესახებ ან ატვირთეთ.",
-      "lostPets": "დაკარგული ცხოველები",
-      "streetPets": "ქუჩის ცხოველები",
-      "login": "შესვლა",
-      "footer": "ყველა უფლება დაცულია."
-    }
+  "home": {
+    "header": "ცხოველების პლატფორმა",
+    "welcome": "კეთილი იყოს თქვენი მობრძანება ცხოველების პლატფორმაზე",
+    "description": "მიიღეთ ინფორმაცია ცხოველების შესახებ ან ატვირთეთ.",
+    "lostPets": "დაკარგული ცხოველები",
+    "streetPets": "ქუჩის ცხოველები",
+    "login": "შესვლა",
+    "footer": "ყველა უფლება დაცულია."
+  },
+  "login": {
+    "title": "შესვლა",
+    "email": "ელ-ფოსტა",
+    "password": "პაროლი",
+    "emailPlaceholder": "შეიყვანეთ თქვენი ელ-ფოსტა",
+    "passwordPlaceholder": "შეიყვანეთ თქვენი პაროლი",
+    "submitButton": "შესვლა",
+    "or": "ან",
+    "register": "რეგისტრაცია"
   }
-  
+}
