--- a/src/i18n/locales/ge/translation.json
+++ b/src/i18n/locales/ge/translation.json
@@ -5,8 +5,7 @@
     "description": "მიიღეთ ინფორმაცია ცხოველების შესახებ ან ატვირთეთ.",
     "lostPets": "დაკარგული ცხოველები",
     "streetPets": "ქუჩის ცხოველები",
-    "login": "შესვლა",
-    "footer": "ყველა უფლება დაცულია."
+    "login": "შესვლა"
   },
   "login": {
     "title": "შესვლა",
@@ -50,9 +49,15 @@
     "messagePlaceholder": "დაწერეთ შეტყობინება",
     "submit": "გაგზავნა"
   },
-  
+
   "faq": {
     "title": "ხშირად დასმული კითხვები"
+  },
+  "footer": {
+    "faqs": "ხშირად დასმული კითხვები",
+    "about_us": "ჩვენს შესახებ",
+    "support": "დახმარება",
+    "terms_conditions": "წესები და პირობები",
+    "all_rights_reserved": "ყველა უფლება დაცულია."
   }
-
 }
