feat: creat edit page for about us in admin panel

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -65,7 +65,8 @@
     "historyBackground": "History & Background",
     "foundingStory": "Founding Story",
     "features": "Features",
-    "howItWorks": "How It Works"
+    "howItWorks": "How It Works",
+    "saveChanges": "Save Cahnges"
   },
   "adminDashboard": {
     "title": "Admin Dashboard",
