--- a/src/i18n/locales/ge/translation.json
+++ b/src/i18n/locales/ge/translation.json
@@ -67,7 +67,8 @@
     "foundingStory": "დამფუძნებლების ისტორია",
     "features": "მახასიათებლები",
     "howItWorks": "როგორ მუშაობს",
-    "saveChanges": "შეინახე ცვლილებები"
+    "saveChanges": "შეინახე ცვლილებები",
+    "validationError": "გთხოვთ შეავსოთ ყველა ველი."
   },
   "adminDashboard": {
     "title": "ადმინისტრატორის პანელი",
@@ -82,6 +83,14 @@
     "settingsTitle": "პარამეტრები",
     "settingsDescription": "კონფიგურაციები და ზოგადი პარამეტრების დაყენება აპლიკაციისთვის.",
     "settingsButton": "ზოგადი პარამეტრები"
+  },
+  "languageAlert": {
+    "title": "ენების გაფრთხილება",
+    "text": "გთხოვთ, წერეთ ქართული ენა.",
+    "button": "დასტური"
+  },
+  "warning": {
+    "title": "გაფრთხილება"
   }
   
 }
