refactor: update Georgian translation text for language alert

--- a/src/i18n/locales/ge/translation.json
+++ b/src/i18n/locales/ge/translation.json
@@ -86,7 +86,7 @@
   },
   "languageAlert": {
     "title": "ენების გაფრთხილება",
-    "text": "გთხოვთ, წერეთ ქართული ენა.",
+    "text": "გთხოვთ, დაწერეთ ქართულად",
     "button": "დასტური"
   },
   "warning": {
