refactor: update translation text for language alerts

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -90,5 +90,15 @@
   },
   "warning": {
     "title": "Warning"
+  },
+  "success": {
+    "title": "Success!",
+    "text": "About Us data has been updated successfully.",
+    "button": "OK"
+  },
+  "error": {
+    "title": "Oops...",
+    "text": "Something went wrong while updating About Us data.",
+    "button": "OK"
   }
 }
