--- a/src/i18n/locales/ge/translation.json
+++ b/src/i18n/locales/ge/translation.json
@@ -91,6 +91,15 @@
   },
   "warning": {
     "title": "გაფრთხილება"
-  }
-  
+  },
+  "success": {
+    "title": "წარმატება!",
+    "text": "ჩვენს შესახებ მონაცემები წარმატებით განახლდა.",
+    "button": "OK"
+  },
+  "error": {
+    "title": "უი...",
+    "text": "დაფიქსირდა შეცდომა მონაცემების განახლებისას.",
+    "button": "OK"
+  }  
 }
