--- a/src/i18n/locales/ge/translation.json
+++ b/src/i18n/locales/ge/translation.json
@@ -101,5 +101,15 @@
     "title": "უი...",
     "text": "დაფიქსირდა შეცდომა მონაცემების განახლებისას.",
     "button": "OK"
-  }  
+  },
+  "deleteAlert": {
+    "title": "დარწმუნებული ხართ?",
+    "text": "ნამდვილად გსურთ ამ FAQ-ის წაშლა? ",
+    "confirm": "დიახ, წაშალეთ!",
+    "cancel": "გაუქმება"
+  },
+  "deleteSuccess": {
+    "title": "წაიშალა!",
+    "text": "FAQ წარმატებით წაიშალა."
+  }
 }
