--- a/src/i18n/locales/ge/translation.json
+++ b/src/i18n/locales/ge/translation.json
@@ -94,22 +94,26 @@
   },
   "success": {
     "title": "წარმატება!",
-    "text": "ჩვენს შესახებ მონაცემები წარმატებით განახლდა.",
+    "text": "მონაცემები წარმატებით განახლდა.",
     "button": "OK"
   },
   "error": {
     "title": "უი...",
-    "text": "დაფიქსირდა შეცდომა მონაცემების განახლებისას.",
+    "text": "დაფიქსირდა შეცდომა.",
     "button": "OK"
   },
   "deleteAlert": {
     "title": "დარწმუნებული ხართ?",
-    "text": "ნამდვილად გსურთ ამ FAQ-ის წაშლა? ",
+    "text": "ნამდვილად გსურთ ამ წაშლა? ",
     "confirm": "დიახ, წაშალეთ!",
     "cancel": "გაუქმება"
   },
   "deleteSuccess": {
     "title": "წაიშალა!",
-    "text": "FAQ წარმატებით წაიშალა."
+    "text": "წარმატებით წაიშალა."
+  }, 
+  "terms": {
+    "title": "წესები და პირობები",
+    "noTerms": "წესი და პირობა არ არის."
   }
 }
