feat: create user block/unblock functionality

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -16,7 +16,8 @@
     "submitButton": "Login",
     "or": "or",
     "register": "Register",
-    "error": "Invalid email or password."
+    "error": "Invalid email or password.",
+    "blockedUser": "Your account is blocked."
   },
   "registration": {
     "title": "Registration",
