--- a/src/i18n/locales/ge/translation.json
+++ b/src/i18n/locales/ge/translation.json
@@ -16,7 +16,8 @@
     "submitButton": "შესვლა",
     "or": "ან",
     "register": "რეგისტრაცია",
-    "error": "არასწორი ელ-ფოსტა ან პაროლი."
+    "error": "არასწორი ელ-ფოსტა ან პაროლი.",
+    "blockedUser": "თქვენი მომხმარებელი დაბლოკილია."
   },
   "registration": {
     "title": "რეგისტრაცია",
