chore: update translations

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -122,16 +122,32 @@
     "title": "Terms & Conditions",
     "noTerms": "No terms and conditions available."
   },
-    "settings": {
-      "title": "Settings",
-      "email": "Email",
-      "password": "Password",
-      "firstName": "First Name",
-      "lastName": "Last Name",
-      "emailPlaceholder": "Enter your email",
-      "passwordPlaceholder": "Enter your password",
-      "firstNamePlaceholder": "Enter your first name",
-      "lastNamePlaceholder": "Enter your last name",
-      "save": "Save"
-  }  
+  "settings": {
+    "title": "Settings",
+    "email": "Email",
+    "password": "Password",
+    "firstName": "First Name",
+    "lastName": "Last Name",
+    "emailPlaceholder": "Enter your email",
+    "passwordPlaceholder": "Enter your password",
+    "firstNamePlaceholder": "Enter your first name",
+    "lastNamePlaceholder": "Enter your last name",
+    "save": "Save"
+  },
+  "adminUsers": {
+    "title": "Admin Users",
+    "noUsers": "No users found.",
+    "profile": "Profile",
+    "name": "Name",
+    "email": "Email",
+    "phone": "Phone",
+    "status": "Status",
+    "userId": "User ID",
+    "actions": "Actions",
+    "blocked": "Blocked",
+    "active": "Active",
+    "unblock": "Unblock",
+    "block": "Block",
+    "delete": "Delete"
+  }
 }
