chore: update translation

--- a/src/i18n/locales/ge/translation.json
+++ b/src/i18n/locales/ge/translation.json
@@ -145,7 +145,7 @@
     "status": "სტატუსი",
     "userId": "მომხმარებლის ID",
     "actions": "მოქმედებები",
-    "blocked": "ბლოკირებული",
+    "blocked": "დაბლოკილი",
     "active": "აქტიური",
     "unblock": "განბლოკვა",
     "block": "ბლოკირება",
