feat: add search users input

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -148,6 +148,7 @@
     "active": "Active",
     "unblock": "Unblock",
     "block": "Block",
-    "delete": "Delete"
+    "delete": "Delete",
+    "searchPlaceholder": "Search users..."
   }
 }
