--- a/src/i18n/locales/ge/translation.json
+++ b/src/i18n/locales/ge/translation.json
@@ -149,6 +149,7 @@
     "active": "აქტიური",
     "unblock": "განბლოკვა",
     "block": "ბლოკირება",
-    "delete": "წაშლა"
+    "delete": "წაშლა",
+    "searchPlaceholder": "მომხმარებლების ძებნა..."
   }
 }
