--- a/src/i18n/locales/ge/translation.json
+++ b/src/i18n/locales/ge/translation.json
@@ -136,7 +136,7 @@
     "save": "შენახვა"
   },
   "adminUsers": {
-    "title": "ადმინისტრატორი მომხმარებლები",
+    "title": "მომხმარებლები",
     "noUsers": "მომხმარებლები ვერ მოიძებნა.",
     "profile": "პროფილი",
     "name": "სახელი",
