--- a/src/i18n/locales/ge/translation.json
+++ b/src/i18n/locales/ge/translation.json
@@ -151,5 +151,18 @@
     "block": "ბლოკირება",
     "delete": "წაშლა",
     "searchPlaceholder": "მომხმარებლების ძებნა..."
+  },
+  "updateUser": {
+    "updateDetails": "მომხმარებლის დეტალების განახლება",
+    "email": "ელ-ფოსტა:",
+    "firstName": "სახელი:",
+    "lastName": "გვარი:",
+    "phoneNumber": "ტელეფონის ნომერი:",
+    "profilePicture": "პროფილის სურათი:",
+    "success": "მომხმარებელი წარმატებით განახლდა!",
+    "error": "მომხმარებლის განახლება ვერ მოხერხდა.",
+    "ops": "ოპს",
+    "noChanges": "ცვლილებები ვერ მოიძებნა!",
+    "button": "განახლება"
   }
 }
