chore: update translations

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -162,6 +162,7 @@
     "error": "Failed to update user.",
     "ops": "Oops",
     "noChanges": "No changes detected!",
-    "button": "Update"
+    "button": "Update",
+    "removeFile": "Remove File"
   }
 }
