--- a/src/i18n/locales/ge/translation.json
+++ b/src/i18n/locales/ge/translation.json
@@ -163,6 +163,7 @@
     "error": "მომხმარებლის განახლება ვერ მოხერხდა.",
     "ops": "ოპს",
     "noChanges": "ცვლილებები ვერ მოიძებნა!",
-    "button": "განახლება"
+    "button": "განახლება",
+    "removeFile": "ფაილის წაშლა"
   }
 }
