--- a/src/i18n/locales/ge/translation.json
+++ b/src/i18n/locales/ge/translation.json
@@ -159,6 +159,7 @@
     "lastName": "გვარი:",
     "phoneNumber": "ტელეფონის ნომერი:",
     "profilePicture": "პროფილის სურათი:",
+    "password": "პაროლი",
     "success": "მომხმარებელი წარმატებით განახლდა!",
     "error": "მომხმარებლის განახლება ვერ მოხერხდა.",
     "ops": "ოპს",
