--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -165,5 +165,38 @@
     "noChanges": "No changes detected!",
     "button": "Update",
     "removeFile": "Remove File"
+  },
+  "lostPetModal": {
+    "title": "Add Lost Pet",
+    "fields": {
+      "title": " Name of the Pet",
+      "breed": "Breed",
+      "age": "Age",
+      "gender": "Gender",
+      "genderMale": "Male",
+      "genderFemale": "Female",
+      "description": "Description",
+      "help": "Help Needed",
+      "accountNumber": "Account Numbers",
+      "location": "Location",
+      "aggresive": "Aggressive",
+      "status": "Status",
+      "images": "Images",
+      "videos": "Videos"
+    },
+    "placeholders": {
+      "title": "Enter pet title",
+      "breed": "Enter breed",
+      "age": "Enter age",
+      "description": "Enter description",
+      "location": "Enter location"
+    },
+    "buttons": {
+      "addAccountNumber": "Add Account Number",
+      "removeAccountNumber": "Remove Account Number",
+      "remove": "Remove",
+      "submit": "Submit",
+      "close": "Close"
+    }
   }
 }
