--- a/src/i18n/locales/ge/translation.json
+++ b/src/i18n/locales/ge/translation.json
@@ -170,7 +170,7 @@
   "lostPetModal": {
     "title": "დაკარგული ცხოველის დამატება",
     "fields": {
-      "title": "ცხოველის სახელი",
+      "pet_name": "ცხოველის სახელი",
       "breed": "ჯიში",
       "age": "ასაკი",
       "gender": "სქესი",
@@ -186,7 +186,7 @@
       "videos": "ვიდეოები"
     },
     "placeholders": {
-      "title": "შეიყვანეთ ცხოველის დასახელება",
+      "pet_name": "შეიყვანეთ ცხოველის სახელი",
       "breed": "შეიყვანეთ ჯიში",
       "age": "შეიყვანეთ ასაკი",
       "description": "შეიყვანეთ აღწერა",
