--- a/src/i18n/locales/ge/translation.json
+++ b/src/i18n/locales/ge/translation.json
@@ -198,6 +198,15 @@
       "remove": "წაშლა",
       "submit": "დამატება",
       "close": "დახურვა"
+    },
+    "errors": {
+      "pet_nameRequired": "ცხოველის სახელი აუცილებელია.",
+      "breedRequired": "ჯიში აუცილებელია.",
+      "ageInvalid": "წელი უნდა იყოს ვალიდური რიცხვი.",
+      "descriptionRequired": "აღწერა აუცილებელია.",
+      "locationRequired": "ადგილმდებარეობა აუცილებელია.",
+      "mediaRequired": "ფოტოს ან ვიდეოს ატვირთვა აუცილებელია.",
+      "submitFailed": "ფორმის გაგზავნა ვერ მოხერხდა. სცადეთ თავიდან."
     }
   }
 }
