--- a/src/i18n/locales/ge/translation.json
+++ b/src/i18n/locales/ge/translation.json
@@ -208,5 +208,20 @@
       "mediaRequired": "ფოტოს ან ვიდეოს ატვირთვა აუცილებელია.",
       "submitFailed": "ფორმის გაგზავნა ვერ მოხერხდა. სცადეთ თავიდან."
     }
+  },
+  "lostPetPage": {
+    "title": "დაკარგული ცხოველები",
+    "addLostPetButton": "დაამატე დაკარგული ცხოველი",
+    "viewMoreImages": "მეტი სურათების ნახვა",
+    "viewMoreVideos": "მეტი ვიდეოების ნახვა",
+    "noLostPetsFound": "დაკარგული ცხოველები ვერ მოიძებნა.",
+    "name": "სახელი:",
+    "breed": "ჯიში:",
+    "age": "ასაკი:",
+    "gender": "სქესი:",
+    "description": "აღწერა:",
+    "location": "ადგილმდებარეობა:",
+    "aggressive": "აგრესიულია?:",
+    "status": "სტატუსი:"
   }
 }
