feat: create profile page and edit lost pets form

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -220,6 +220,8 @@
     "gender": "Gender:",
     "male": "Male",
     "female": "Female",
+    "lost": "Lost",
+    "found": "Found",
     "description": "Description:",
     "location": "Location:",
     "aggressive": "Aggressive:",
