--- a/src/i18n/locales/ge/translation.json
+++ b/src/i18n/locales/ge/translation.json
@@ -219,6 +219,8 @@
     "breed": "ჯიში:",
     "age": "ასაკი:",
     "gender": "სქესი:",
+    "lost": "დაკარგული",
+    "found": "ნაპოვნი",
     "male": "ხვადი",
     "female": "ძუ",
     "description": "აღწერა:",
