refactor: update translations

--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -230,6 +230,7 @@
     "editButton": "Edit",
     "cancelButton": "Cancel",
     "saveButton": "Save",
+    "saving": "Saving...",
     "updateError": "Failed to update lost pet.",
     "updateSuccess": "Lost pet updated successfully!"
   }
