--- a/src/i18n/locales/ge/translation.json
+++ b/src/i18n/locales/ge/translation.json
@@ -231,6 +231,7 @@
     "editButton": "რედაქტირება",
     "cancelButton": "გაუქმება",
     "saveButton": "შენახვა",
+    "saving": "იტვირთება...",
     "updateError": "განახლება ვერ მოხერხდა.",
     "updateSuccess": "წარმატებით განახლდა!"
   }
